--- a/style.css
+++ b/style.css
@@ -114,6 +114,10 @@
     font-style: italic;
 }
 
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 /* ---|| LAYOUT ||--- */
 html, body {
     height: 100vh;
@@ -151,14 +155,14 @@ header, main, footer {
 /* ---|| HEADER ||--- */
 header {
     font-family: "Roboto", sans-serif;
-    font-weight: 400;
+    font-weight: 300;
     font-style: normal;
     color: white;
-    min-height: 90px;
+    min-height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
     background-color: rgba(0, 0, 0, 0.5);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
 }
@@ -168,7 +172,7 @@ header {
     filter: invert(1);
 }
 
-#addBook {
+#addBookBtn {
     background-color: transparent;
     border: none;
     border-radius: 50%;
@@ -178,19 +182,26 @@ header {
     margin-left: 50px;
   }
   
-  #addBook svg {
+  #addBookBtn svg {
     height: 50px;
     filter: invert(1);
     transition: transform 250ms;
   }
   
-  #addBook svg:hover {
+  #addBookBtn svg:hover {
     filter: invert(0);
     transform: scale(1.25) rotate(-90deg);
     cursor: pointer;
   }
 
 /* ---|| CONTENT||--- */
+main {
+  display: grid;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: whitesmoke;
+}
 
 /* ---|| FOOTER ||--- */
 footer {
@@ -198,7 +209,7 @@ footer {
     font-weight: 400;
     font-style: normal;
     color: white;
-    min-height: 50px;
+    min-height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
