--- a/style.css
+++ b/style.css
@@ -42,80 +42,13 @@
   }
 
 /* ---|| FONTS ||--- */
-.roboto-thin {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-}
-  
-.roboto-light {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-}
-
-.roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-  
-.roboto-medium {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-}
-  
-.roboto-bold {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-}
-  
-.roboto-black {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-}
-  
-.roboto-thin-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: italic;
-}
-  
-.roboto-light-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: italic;
-}
-  
-.roboto-regular-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-}
-  
-.roboto-medium-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: italic;
-}
-  
-.roboto-bold-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-}
-  
-.roboto-black-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: italic;
+/* ---|| FONTS ||--- */
+:root {
+  --font-primary: "Roboto", -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: var(--font-primary);
 }
 
 /* ---|| LAYOUT ||--- */
@@ -154,9 +87,7 @@ header, main, footer {
 
 /* ---|| HEADER ||--- */
 header {
-    font-family: "Roboto", sans-serif;
     font-weight: 300;
-    font-style: normal;
     color: white;
     min-height: 70px;
     display: flex;
@@ -194,20 +125,140 @@ header {
     cursor: pointer;
   }
 
+/* ---|| NEW BOOK FORM ||--- */
+dialog {
+  margin: auto;
+  font-weight: 700;
+  padding: 2rem;
+  width: 450px;
+  height: 590px;
+  position: relative;
+  background-color: rgba(69, 69, 69, 0.75);
+  color: white;
+  border-radius: 1rem;
+  border: none;
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+}
+
+#addBookDialog {
+  position: relative;
+}
+
+.field {
+  display: flex;
+  flex-flow: column;
+  padding: 0.4rem;
+  border-radius: 50px;
+}
+
+.field label[for='title'] {
+  margin-top: 1rem;
+}
+
+.field input {
+  border-radius: 0.5rem;
+  border: none;
+  padding: 0.4rem 0.4rem;
+  margin: 0.4rem 0;
+}
+
+.field input:focus {
+  border: none;
+  outline: none;
+}
+
+fieldset {
+  border-style: none;
+  padding: 0.7rem;
+}
+
+fieldset legend {
+  padding-top: 10px;
+}
+
+fieldset .radio label {
+  font-size: 10pt;
+  font-weight: 500;
+}
+
+button[value='cancel'] {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+button[value='cancel'] svg {
+  display: block;
+  width: 35px;
+  height: 35px;
+  fill: white;
+  transition: fill 50ms ease;
+}
+
+button[value='cancel']:hover svg {
+  fill: red;
+}
+
+button[type='reset'] {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+button[type='reset'] svg {
+  fill: white;
+  display: block;
+  width: 35px;
+  height: 35px;
+  transition: fill 50ms ease;
+}
+
+button[type='reset']:hover svg {
+  fill: yellow;
+}
+
+#confirmBtn {
+  font-weight: 800;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.5rem 0rem;
+  font-size: 1rem;
+  box-shadow: 2px 2px 30px black;
+  transition: transform 50ms;
+}
+
+#confirmBtn:hover {
+  cursor: pointer;
+  transform: scale(1.03);
+}
+
+#confirmBtn:active {
+  transform: scale(0.97);
+  box-shadow: 3px 3px 40px black;
+}
+
 /* ---|| CONTENT||--- */
 main {
   display: grid;
-  font-family: "Roboto", sans-serif;
   font-weight: 300;
-  font-style: normal;
   color: whitesmoke;
 }
 
 /* ---|| FOOTER ||--- */
 footer {
-    font-family: "Roboto", sans-serif;
     font-weight: 400;
-    font-style: normal;
     color: white;
     min-height: 40px;
     display: flex;
@@ -221,9 +272,7 @@ footer {
 footer a {
     text-decoration: none;
     color: white;
-    font-family: "Roboto", sans-serif;
     font-weight: 400;
-    font-style: normal; 
 }
 
 footer a:hover {
