--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ main {
   padding: 1rem;
   margin: 1rem;
   border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(69, 67, 67, 0.3);
   backdrop-filter: blur(10px);
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   overflow: hidden;
@@ -362,8 +362,8 @@ main {
   position: absolute;
   top: 0px;
   right: 0px;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-bottom-left-radius: 50%;
   border: 7px solid transparent;
   background-color: rgba(255, 255, 255, 0.5);
@@ -384,8 +384,8 @@ main {
   position: absolute;
   bottom: 0px;
   left: 0px;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
   background-size: cover;
   background-repeat: no-repeat;
@@ -393,7 +393,7 @@ main {
   background-color: lightcoral;
   border-top-right-radius: 50%;
   border: 7px solid transparent;
-  box-shadow: 1px -1px 5px gray;
+  box-shadow: 1px -1px 3px gray;
 }
 
 /* read state */
@@ -415,29 +415,38 @@ input[type='checkbox'].currently-reading + .read-toggle {
 
 /* #endregion---|| CONTENT||--- */
 /* #region---|| FOOTER ||--- */
-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    font-weight: 500;
-    color: white;
-    min-height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    background-color: rgba(0, 0, 0, 0.6);
-    box-shadow: 0 -4px 3px rgba(0, 0, 0, 0.5);
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  font-weight: 500;
+  color: whitesmoke;
+  min-height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+  box-shadow: 0 -4px 3px rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
-footer a {
-    text-decoration: none;
-    color: whitesmoke;
-    font-weight: 600;
+footer p {
+  text-decoration: none;
+  color: whitesmoke;
+  font-weight: 500;
 }
 
-footer a:hover {
-    color: rgba(1, 1, 1, 0.933); 
+.github-icon {
+  transition: transform 0.5s ease-in-out;
+  margin-left: -5px;
+  position: relative;
+  bottom: 0px;
+  left: 0px;
+}
+
+.github-icon:hover {
+  transform: rotate(360deg);
 }
 /* #endregion---|| FOOTER ||--- */
