Refactored to ES6 modules

--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ main {
   font-style: italic;
 }
 
-#currently-reading {
+#reading {
   /* background-color: rgba(30, 144, 255, 0.1); blue */
 }
 
